rectify resume component

--- a/src/app/views/portfolio/portfolio.component.html
+++ b/src/app/views/portfolio/portfolio.component.html
@@ -1,1 +1,330 @@
-<p>portfolio works!</p>
+  <!-- ======= Portfolio Section ======= -->
+  <section id="portfolio" class="portfolio section-show">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>Portfolio</h2>
+        <p>My Works</p>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-12 d-flex justify-content-center">
+          <ul id="portfolio-flters">
+            <li data-filter="*" class="filter-active">All</li>
+            <li data-filter=".filter-angular">Angular Projects</li>
+            <li data-filter=".filter-nodejs">Node JS Projects</li>
+            <li data-filter=".filter-laravel">Laravel Projects</li>
+            <li data-filter=".filter-js">Js Chunks</li>
+            <li data-filter=".filter-csstemp">Css Templates</li>
+            <li data-filter=".filter-bootemp">Bootstrap Templates</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row portfolio-container">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/router.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>CRUD with Authentication</h4>
+              <p>Angular Reactive Driven Form and Auth token key </p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/AngularAuthCRUD.git"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/curd.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>CRUD using Routes</h4>
+              <p>Angular Reactive Driven Form </p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/AngularRoutingCRUD.git"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-nodejs">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/curd.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>CRUD using MongoDb shell</h4>
+              <p>Node js Driven Form, Postman </p>
+              <div class="portfolio-links">
+                <a href=""><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-nodejs">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/curd.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>CRUD using MySql</h4>
+              <p>Node js Driven Form,Postman</p>
+              <div class="portfolio-links">
+                <a href=""><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-nodejs">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/e-commerce.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Prokart</h4>
+              <p>E-commerce website using Nodejs, JWT Auth,JOI validation,Mongoose,MongoDb,Swagger</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/Prokart.git"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-nodejs">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/chatapp.png" style="height: 180px;;" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Chat App</h4>
+              <p>using Nodejs, Socket.io</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/ChatApp.git"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/curd.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>CRUD using Routes</h4>
+              <p>Angular Reactive Driven Form </p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/AngularRoutingCRUD.git"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/carental.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>CarDhundho.com</h4>
+              <p>Angular, Rest Api using Swagger UI</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/CarDhundho.com.git"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/curd.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>CRUD with Local Storage</h4>
+              <p>Angular Reactive Form</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/AngularReactiveformLocalstorageCRUD.git"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/curd.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>CRUD using Parent Child Component</h4>
+              <p>Angular Reactive Form</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/Angular-Parent-ChildCrud.git"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-laravel">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/e-commerce.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>E-Commerce Website</h4>
+              <p>Laravel & MySql</p>
+              <div class="portfolio-links">
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/api.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Understanding and Working with APIs</h4>
+              <p>Angular, Rest Api using Dummy Json</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/DummyApiHandlingwithAngular.git"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-csstemp">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/restaurant.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Restaurant Template</h4>
+              <p>Css , non responsive</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/RestaurantCss.git"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-csstemp">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/solar_system.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Solar System</h4>
+              <p>Css , non responsive</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/Solar_System"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-csstemp">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/bihar-tour.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Bihar Tourism Template</h4>
+              <p>using Css , non responsive</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/Bihar_Tourism.git"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-csstemp">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/vegan.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Vegan Template</h4>
+              <p>Css, non responsive</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/VeganCss.git"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-js">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/stopwatch.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Stop Watch</h4>
+              <p>Js, Css and Bootstrap</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/StopwatchJS.git"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-js">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/curd.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>CRUD</h4>
+              <p>Js, Css and Bootstrap</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/JsCRUD.git"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-js">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/word-count.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Word Counter</h4>
+              <p>Js, Css</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/Word-Counter"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-bootemp">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/medical.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Medical Template</h4>
+              <p>Js, Css, Bootstrap</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/MedicioBootstrap.git"
+                  data-gallery="portfolioDetailsGallery"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-bootemp">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/food-delivery.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Foodies</h4>
+              <p>Js, Css, Bootstrap</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/FoodiesBootstrapTemplate.git"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-bootemp">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/medilab.jfif" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Medical Lab</h4>
+              <p>Js, Css, Bootstrap</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/MediLabBootstrap.git"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-js">
+          <div class="portfolio-wrap">
+            <img src="/portfolio/quote.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Random Quote Generator</h4>
+              <p>Js, Css, Bootstrap</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/praveensrivastav3j/Random_Quote_Generator"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section><!-- End Portfolio Section -->
