--- a/src/app/views/resume/resume.component.html
+++ b/src/app/views/resume/resume.component.html
@@ -1,1 +1,116 @@
-<p>resume works!</p>
+  <!-- ======= Resume Section ======= -->
+  <section id="resume" class="resume section-show">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>Resume</h2>
+        <p>Check My Resume</p>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <h3 class="resume-title">Summary</h3>
+          <div class="resume-item pb-0">
+            <h4>Praveen Srivastav</h4>
+            <p><em>To leverage my extensive knowledge and skills in the field of Information Technology to drive
+                innovation,
+                optimize processes, and achieve the company's goals. Previously worked as a Laravel Developer and now
+                want to explore my skills in the Full-Stack part by seeking to work as MEAN stack Developer </em></p>
+            <!-- <p> -->
+            <ul>
+              <li>312,313 Trupti Nagar, Pandesara, Surat</li>
+              <li>(+91) 7016225515</li>
+              <li>{{"praveensrivastav3july@zohomail.in"}}</li>
+            </ul>
+            <!-- </p> -->
+          </div>
+
+          <h3 class="resume-title">Education</h3>
+          <div class="resume-item">
+            <h4>Bachelor's in Mechanical Engineering</h4>
+            <h5>2019 - 2022</h5>
+            <p><em>Vidhyadeep Institute of Engineering and Technology,Kim</em></p>
+            <p>8.62 CGPA</p>
+          </div>
+          <div class="resume-item">
+            <h4>Diploma in Mechanical Engineering</h4>
+            <h5>2016 - 2019</h5>
+            <p><em>Government Polytechnic, Valsad</em></p>
+            <p>7.76 CGPA</p>
+          </div>
+          <div class="resume-item">
+            <h4>Gujarat Secondary Education (10th)</h4>
+            <h5>2015 - 2016</h5>
+            <p><em>Oxford English Hr. Sec. School, Surat</em></p>
+            <p>71%</p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <h3 class="resume-title">Professional Experience</h3>
+          <div class="resume-item">
+            <h4>Laravel Developer</h4>
+            <h5>May2022 - October2022</h5>
+            <p><em>Experience: 5months, Trezix Software Pvt. Ltd.</em></p>
+            <!-- <p> -->
+            <ul>
+              <li>Work as a Trainee Developer in the Product Based Company</li>
+              <li>Within the 1 month of Training went to Live Product </li>
+              <li>Build the whole portal of Stock Part of the Import Export App using Laravel as Backend and MySql to
+                store data </li>
+            </ul>
+            <!-- </p> -->
+          </div>
+          <div class="resume-item">
+            <h4>Angular Js Tutor</h4>
+            <h5>October2022 - October2024</h5>
+            <p><em>Experience: 2year, Oscar Carrer Point</em></p>
+            <!-- <p> -->
+            <ul>
+              <li>For First 6 month learn teh MEAN Stack at the Institue</li>
+              <li>Later on taught Student as per the Industrial Standard & Logical & Tenical expertise for Angular Language using my Past Job Experience</li>
+            </ul>
+            <!-- </p> -->
+          </div>
+          <div class="resume-item">
+            <h4>MEAN Stack Developer</h4>
+            <h5>November2024 - Present</h5>
+            <p><em>Experience: 1year 5months & counting.., Digitalks Techno LLP.</em></p>
+            <!-- <p> -->
+            <ul>
+              <li>Work as a Angular Developer in the early phase of 3months</li>
+              <li>Later on started building Apis in Back-end with Nodejs & storing data using Mongodb and started
+                working as full fledgeded MEAN Stack developer</li>
+            </ul>
+            <!-- </p> -->
+          </div>
+          <div class="resume-item">
+            <h4>HIMS Project Team Lead</h4>
+            <h5>April2025 - June2025</h5>
+            <p><em>Experience: 3months, Digitalks Techno LLP.</em></p>
+            <!-- <p> -->
+            <ul>
+              <li>Along with MEAN Stack also Work as Project Team Lead of HIMS Phase 1</li>
+              <li>Handle Client Calls & deliver on visit Product Demo as well </li>
+              <li>Also ensuring the distirbuted TeamWork & smooth co-ordination with Upper Management</li>
+            </ul>
+            <!-- </p> -->
+          </div>
+          <div class="resume-item">
+            <h4>MERN Stack/ Next Js / Wordpress</h4>
+            <h5>July2025 - Present</h5>
+            <p><em>Experience: 1year 5months & counting.., Digitalks Techno LLP.</em></p>
+            <!-- <p> -->
+            <ul>
+              <li>Been part & develop the React Based front-end of HIMS as per Client Request</li>
+              <li>Build Curigen, Mom's Ivf, Digitalks , Ads Running Landing Pages, Merena Websites using Next JS & other
+                Different Stacks</li>
+              <li>Develop a Wordpress base plugin of Digitalks Chatbot as per the requirement to integerate in Website
+              </li>
+            </ul>
+            <!-- </p> -->
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section><!-- End Resume Section -->
