--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -1,1 +1,75 @@
-<p>contact works!</p>
+<!-- ======= Contact Section ======= -->
+  <section id="contact" class="contact section-show">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>Contact</h2>
+        <p>Contact Me</p>
+      </div>
+
+      <div class="row mt-2">
+
+        <div class="col-md-6 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="fa-solid fa-location-dot"></i>
+            <h3>My Address</h3>
+            <p>312,313 Trupti Nagar, Pandesara, Surat Pincode:394221</p>
+          </div>
+        </div>
+
+        <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+          <div class="info-box">
+           <i class="fa-solid fa-share-nodes"></i>
+            <h3>Social Profiles</h3>
+            <div class="social-links">
+              <a href="https://github.com/praveensrivastav3j" class="github"> <i class="fa-brands fa-github"></i></a>
+              <a href="https://www.instagram.com/_praveensrivastav_/" class="instagram"><i
+                  class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/srivastav-praveen-754846160/" class="fa-brands fa-linkedin"><i
+                  class="bi bi-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="fa-solid fa-envelope"></i>
+            <h3>Email Me</h3>
+            <p>{{"praveensrivastav3july@zohomail.in"}}</p>
+          </div>
+        </div>
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="fa-solid fa-phone-volume"></i>
+            <h3>Call Me</h3>
+            <p>+917016225515</p>
+          </div>
+        </div>
+      </div>
+
+      <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
+        <div class="row">
+          <div class="col-md-6 form-group">
+            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+          </div>
+          <div class="col-md-6 form-group mt-3 mt-md-0">
+            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+          </div>
+        </div>
+        <div class="form-group mt-3">
+          <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+        </div>
+        <div class="form-group mt-3">
+          <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+        </div>
+        <div class="my-3">
+          <div class="loading">Loading</div>
+          <div class="error-message"></div>
+          <div class="sent-message">Your message has been sent. Thank you!</div>
+        </div>
+        <div class="text-center"><button type="submit">Send Message</button></div>
+      </form>
+
+
+    </div>
+  </section><!-- End Contact Section -->
