--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -3,6 +3,7 @@
 
   <!-- ======= About Me ======= -->
   <div class="about-me container">
+    <i class="fa-solid fa-plus" *ngIf="isLogin"  routerLink="/addabout"></i>
     <div class="section-title">
       <h2>About</h2>
       <p>Learn more about me</p>
