--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -35,7 +35,7 @@
           class="fa-brands fa-linkedin"></i></a>
     </div>
 
-    <p class="my-4"><u>
+    <p class="my-4" *ngIf="!isLogin"><u>
 
       </u><a href="/login"> Are you Admin ?</a></p>
   </div>
