--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -12,7 +12,7 @@
     <div class="row" *ngFor="let about of aboutData">
       <div class="col-lg-4" data-aos="fade-right">
         <!-- <img [src]="about.image" class="img-fluid" alt="profile image"> -->
-        <img [src]="'http://localhost:5000' + about.image" class="img-fluid" />
+        <img [src]="'https://praveensrivastav-backend.onrender.com/sp' + about.image" class="img-fluid" />
 
 
       </div>
