added uplaod image multer

--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -13,7 +13,8 @@
       <div class="col-lg-4" data-aos="fade-right">
         <!-- <img [src]="about.image" class="img-fluid" alt="profile image"> -->
         <img [src]="'https://praveensrivastav-backend.onrender.com/sp' + about.image" class="img-fluid" />
-
+        <!-- <img [src]="'http://localhost:5000' + about.image" class="img-fluid" /> -->
+<!-- http://localhost:5000/upload/about/1769252401931.jpeg -->
 
       </div>
       <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
