Saas subscription base structure

--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -12,8 +12,8 @@
     <div class="row" *ngFor="let about of aboutData">
       <div class="col-lg-4" data-aos="fade-right">
         <!-- <img [src]="about.image" class="img-fluid" alt="profile image"> -->
-        <img [src]="'https://praveensrivastav-backend.onrender.com' + about.image" class="img-fluid" />
-        <!-- <img [src]="'http://localhost:5000' + about.image" class="img-fluid" /> -->
+        <!-- <img [src]="'https://praveensrivastav-backend.onrender.com' + about.image" class="img-fluid" /> -->
+        <img [src]="'http://localhost:5000' + about.image" class="img-fluid" />
 <!-- http://localhost:5000/upload/about/1769252401931.jpeg -->
 
       </div>
