--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <p class="subtitle">Are You Admin?</p>
+    <p class="subtitle">Are You SuperAdmin or Tenant?</p>
 
     <form [formGroup]="onLogin" (ngSubmit)="Login()">
       <input type="text" placeholder="Username" formControlName="userName" class="input-field"
@@ -46,7 +46,7 @@
         formControlName="loginType"
         class="input-field"
       >
-        <option value="branch">Branch Admin</option>
+        <option value="branch">Branch Admin</option>  
         <option value="user">Branch User</option>
         <option value="superadmin">Digitalks</option>
       </select> -->
