--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: #040404;
+  background-color: #040404 ;
   color: #fff;
   position: relative;
   background: transparent;
@@ -178,4 +178,11 @@ section .container {
 .projects-slider .swiper-pagination-bullet-active {
   background: #18d26e;   /* active green dot */
   transform: scale(1.2);
+}
+
+
+
+.superadmin-container{
+   background: rgba(0, 0, 0, 0.9);
+   padding:  50px;
 }
