sass bases subscription

--- a/src/app/SuperadminViews/tenants/addtenants/addtenants.component.html
+++ b/src/app/SuperadminViews/tenants/addtenants/addtenants.component.html
@@ -18,6 +18,10 @@
           <input type="text" class="form-control" name="tenantPhoneNo" id="tenantPhoneNo" placeholder="tenantPhoneNo" formControlName="tenantPhoneNo"
             required>
         </div>
+        <div class="col-md-6 form-group mt-3 mt-md-0">
+          <input type="email" class="form-control" name="email" id="email" placeholder="email" formControlName="email"
+            required>
+        </div>
       </div>
 
       <div class="text-center my-3"><button type="submit">Create Tenant</button></div>
