--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -8,5 +8,9 @@
   <main class="main-content">
   <router-outlet></router-outlet>
   </main>
+
+  <!-- <footer> -->
+    <app-footer></app-footer>
+  <!-- </footer> -->
 </div>
 
